@@ -5,4 +5,4 @@ VERSION=1.2.2
 STAGE=developer
 
 # PUBLISH_SOURCEFORGE options are 1 or 0
-PUBLISH_SOURCEFORGE=0
+PUBLISH_SOURCEFORGE=1
